# ILPSolverInterface

./: CMakeLists.txt
.github/workflows/: main .yml  main.yml
ILPSolverIf/: CMakeLists.txt  ILPSolverIf.cpp  ILPSolverIf.h  cbc.cmake  symphony.cmake
manylinux2014_x86_64/include/: ILPSolverIf.h
manylinux_2_24_x86_64/lib/: libCbc.so.3.10.5  libCbcSolver.so.3.10.5  libCgl.so.1.10.3  libClp.so.1.14.5  libClpSolver.so.1.14.5  libCoinUtils.so.3.11.4  libOsi.so.1.13.6  libOsiCbc.so.3.10.5  libOsiClp.so.1.14.5
manylinux_2_28_x86_64/lib/: libCbc.so.3.10.5  libCbcSolver.so.3.10.5  libCgl.so.1.10.3  libClp.so.1.14.5  libClpSolver.so.1.14.5  libCoinUtils.so.3.11.4  libOsi.so.1.13.6  libOsiCbc.so.3.10.5  libOsiClp.so.1.14.5
