set(headers ILPSolverIf.h)
set(sources ILPSolverIf.cpp)
include_directories(${cbc_SOURCE_DIR}/Cbc/src)
include_directories(${cbc_SOURCE_DIR}/Cgl/src)
include_directories(${cbc_SOURCE_DIR}/Clp/src)
include_directories(${cbc_SOURCE_DIR}/Clp/src/OsiClp)
include_directories(${cbc_SOURCE_DIR}/Osi/src/Osi)
include_directories(${cbc_SOURCE_DIR}/CoinUtils/src)
include_directories(${symphony_SOURCE_DIR}/SYMPHONY/include)
add_library(ILPSolverIf STATIC ${sources} ${headers})
add_library(ILPSolverIf_shared SHARED ${sources} ${headers})
if (NOT cbc_lib)
add_dependencies(ILPSolverIf cbc)
add_dependencies(ILPSolverIf_shared cbc)
endif()
if (NOT symphony_lib)
add_dependencies(ILPSolverIf symphony)
add_dependencies(ILPSolverIf_shared symphony)
endif()
target_link_libraries(ILPSolverIf INTERFACE ${symphony_LIBRARIES} ${cbc_LIBRARIES})
set_target_properties(ILPSolverIf PROPERTIES PUBLIC_HEADER "ILPSolverIf/ILPSolverIf.h")
install(FILES ${cbc_LIBRARIES} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
install(FILES ${symphony_LIBRARIES} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
